--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a {
 
 /* Title Bar */
 .title-bar {
-  background: linear-gradient(180deg, #005ffe, #005ffe, #005ffe, #005ffe);
+  background: linear-gradient(130deg, #3b78e0, #004ed4, #005ffe, #005ffe);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -117,7 +117,7 @@ a {
   display: none;
   width: 100%;
   flex-direction: column;
-  background: linear-gradient(90deg, #303030f8, #153c80);
+  background: linear-gradient(90deg, #006efff8, #153c80);
   border-radius: 0.5rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   padding: 0.5rem;
@@ -135,8 +135,8 @@ a {
 /* links keep your blue border & hover styles */
 #nav-menu a {
   padding: 0.75rem 1.5rem;
-  color: #0be5fd; /* your light-blue text */
-  border: 2px solid #4da6ff;
+  color: #ffffff; /* your light-blue text */
+  border: 2px solid #2390fd;
   border-radius: 0.5rem;
   background-color: transparent;
   text-align: center;
@@ -158,7 +158,8 @@ a {
   overflow: hidden;
   line-height: 0;
   width: 100vw;
-  height: 45vh; /* fixed panel height */
+  min-height: 25vh; /* fixed panel height */
+  box-sizing: border-box;
 }
 
 /* Track just needs to be a flex row */
@@ -267,7 +268,7 @@ section {
 .services-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 0.25rem;
+  gap: 0.1rem;
 }
 
 .service-item {
@@ -775,6 +776,61 @@ section {
     font-size: 1rem;
   }
 
+  /* About Page */
+  .imgFloatRight {
+    float: right;
+    max-width: 25rem; /* 300px */
+    margin: 0 0 0.9375rem 0.9375rem; /* 0 0 15px 15px */
+    border-radius: 0.5rem; /* 8px */
+  }
+
+  .imgFloatLeft {
+    float: left;
+    max-width: 25rem; /* 300px */
+    margin: 0 0.9375rem 0.9375rem 0; /* 0 15px 15px 0 */
+    border-radius: 0.5rem; /* 8px */
+  }
+
+  .clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .about1 {
+    max-width: 60rem; /* 960px */
+    margin: 0 auto;
+    padding: 0 0.9375rem; /* 0 15px */
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    line-height: 2;
+  }
+
+  .about1 p {
+    line-height: 1.6;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+  }
+
+  .section-title {
+    font-weight: 700;
+    color: #0077cc;
+  }
+
+  .roundedcorner {
+    border-radius: 0.5rem; /* 8px */
+  }
+
+  @media (max-width: 767px) {
+    .imgFloatRight,
+    .imgFloatLeft {
+      float: none;
+      display: block;
+      margin: 0 auto 0.9375rem auto; /* 0 auto 15px auto */
+      max-width: 100%;
+    }
+  }
+
   /* Spacing for sections */
   .hero,
   #about,
@@ -849,7 +905,7 @@ section {
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 290px) {
   .services-list {
     grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
   }
